[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://Textures/Character/dummy.bmp" type="Texture" id=2]
[ext_resource path="res://maps/Textures/barrier_dev.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.7248
height = 90.9884

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 102.274, 114.541 )

[node name="SceneRoot" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -1.54463, 0.22406 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -0.735107, -2.20527 )
shape = SubResource( 1 )

[node name="dash_timer" type="Timer" parent="Player"]
wait_time = 5.0

[node name="Barrier" type="Area2D" parent="."]
position = Vector2( 814.804, 399.136 )

[node name="Sprite" type="Sprite" parent="Barrier"]
position = Vector2( -3.5459, 3.79797 )
scale = Vector2( 0.677741, 0.671642 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
position = Vector2( -0.785217, -0.567688 )
shape = SubResource( 2 )
[connection signal="timeout" from="Player/dash_timer" to="Player" method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="Barrier" to="Player" method="_on_Barrier_body_entered"]
